--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -32,6 +34,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.3",
     "lucide-react": "^0.539.0",
@@ -41,6 +44,7 @@
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^18",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
     "sonner": "^2.0.7",
