--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.3",
